Make sure readonly and disabled are applied to inner editor.

-webkit-user-modify is not set on the input element by disabled or
readonly attributes, but on the inner editor based on the input
attributes. The style recalc is triggered from StyleDidChange on
LayoutTextControl for the input element. However, if the input element
style does not change StyleDidChange is not called, and the inner editor
style is not updated. Trigger the style update when readonly and
disabled attributes change.

Bug: 840833
Change-Id: Iad291b0a079efd197074366e127d1aa3a1f757e7
Reviewed-on: https://chromium-review.googlesource.com/1051236
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557480}