third_party/blink/renderer/core/html/forms/text_field_input_type.cc
@@ -33,6 +33,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "third_party/blink/renderer/core/html/forms/text_field_input_type.h"
 
 #include "third_party/blink/renderer/bindings/core/v8/exception_state.h"
+#include "third_party/blink/renderer/core/css/style_change_reason.h"
 #include "third_party/blink/renderer/core/dom/shadow_root.h"
 #include "third_party/blink/renderer/core/editing/frame_selection.h"
 #include "third_party/blink/renderer/core/events/before_text_inserted_event.h"
@@ -367,14 +368,20 @@ void TextFieldInputType::AttributeChanged() {
   UpdateView();
 }
 
-void TextFieldInputType::DisabledAttributeChanged() {
+void TextFieldInputType::DisabledOrReadonlyAttributeChanged(
+    const QualifiedName& attr) {
   if (SpinButtonElement* spin_button = GetSpinButtonElement())
     spin_button->ReleaseCapture();
+  GetElement().InnerEditorElement()->SetNeedsStyleRecalc(
+      kLocalStyleChange, StyleChangeReasonForTracing::FromAttribute(attr));
+}
+
+void TextFieldInputType::DisabledAttributeChanged() {
+  DisabledOrReadonlyAttributeChanged(disabledAttr);
 }
 
 void TextFieldInputType::ReadonlyAttributeChanged() {
-  if (SpinButtonElement* spin_button = GetSpinButtonElement())
-    spin_button->ReleaseCapture();
+  DisabledOrReadonlyAttributeChanged(readonlyAttr);
 }
 
 bool TextFieldInputType::SupportsReadOnly() const {
