third_party/blink/renderer/core/html/forms/text_field_input_type.h
@@ -102,6 +102,7 @@ class TextFieldInputType : public InputType,
   void SpinButtonDidReleaseMouseCapture(SpinButtonElement::EventDispatch) final;
 
   SpinButtonElement* GetSpinButtonElement() const;
+  void DisabledOrReadonlyAttributeChanged(const QualifiedName&);
 };
 
 }  // namespace blink
